--- a/MightyStruct.App/MightyStruct.App.csproj
+++ b/MightyStruct.App/MightyStruct.App.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MightyStruct\MightyStruct.csproj" />
+  </ItemGroup>
+
 </Project>
