--- a/MightyStruct/MightyStruct.csproj
+++ b/MightyStruct/MightyStruct.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DynamicExpresso.Core" Version="2.3.2" />
+  </ItemGroup>
+
 </Project>
