--- a/MightyStruct.App/Properties/launchSettings.json
+++ b/MightyStruct.App/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MightyStruct.App": {
       "commandName": "Project",
-      "commandLineArgs": "test.bin"
+      "commandLineArgs": "test.xml test.bin"
     }
   }
 }
