--- a/MightyStruct/MightyStruct.csproj
+++ b/MightyStruct/MightyStruct.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DynamicExpresso.Core" Version="2.3.2" />
+    <ProjectReference Include="..\DynamicExpresso\src\DynamicExpresso.Core\DynamicExpresso.Core.csproj" />
   </ItemGroup>
 
 </Project>
