Major changes to core structure and logic to make everything more asynchronous, robust, and uniform

--- a/MightyStruct/MightyStruct.csproj
+++ b/MightyStruct/MightyStruct.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DynamicExpresso\src\DynamicExpresso.Core\DynamicExpresso.Core.csproj" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.7.0" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
   </ItemGroup>
 
 </Project>
